[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alloyai-client"
version = "0.1.5"
description = "Python client for the Alloy server"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "pydantic>=2.12.5,<3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["alloyai_client*"]
